# TestPi

./: .editorconfig  CMakeLists.txt  README.md
examples/: gyro.py
lib/: global.h  global.h.in
lib/I2C/: I2C.cpp  I2C.h
lib/I2Cdev/: I2Cdev.cpp  I2Cdev.h
lib/MPU6050/: MPU6050.cpp  MPU6050.h
lib/SSD1306/: SSD1306.cpp  SSD1306.h
src/: main.cpp  mainMPU6050.h  mainSSD1306.h
